--- a/css/sources/style.css
+++ b/css/sources/style.css
@@ -25,17 +25,6 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
-@font-face {
-    font-family: 'graublauweb-webfont';
-    src: url('../../fonts/graublauweb-webfont.eot');
-    src: url('../../fonts/graublauweb-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../../fonts/graublauweb-webfont.woff') format('woff'),
-         url('../../fonts/graublauweb-webfont.ttf') format('truetype'),
-         url('../../fonts/graublauweb-webfont.svg#graublauweb-webfont') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
 body, html { font-size: 100%; padding: 0; margin: 0; height: 100%;}
 
 *,
@@ -47,7 +36,7 @@ body, html { font-size: 100%; padding: 0; margin: 0; height: 100%;}
 }
 
 body {
-    font-family: 'graublauweb-webfont', Calibri, Arial, sans-serif;
+    font-family: 'Raleway', Verdana, Geneva, sans-serif;
     color: #f2ede3;
     background: #333;
     font-size: 0.9em;
@@ -73,7 +62,7 @@ a:hover {
 p {color: #fff;}
 
 .subtext {
-    font-family: 'Marck Script', cursive;
+    font-family: 'Handlee', verdana, sans-serif;
     text-transform: lowercase;
     letter-spacing: .01em;
     font-size: 1.4em;
@@ -175,7 +164,7 @@ p {color: #fff;}
 	width: 100%;
 	font-size: 1.8em;
 	letter-spacing: 2px;
-	font-weight: 400;
+	font-weight: 700;
 	text-transform: uppercase;
 }
 
@@ -258,7 +247,7 @@ div.bl-panel-items > div > div {
 }
 
 .bl-content h2 {
-    font-family: 'Marck Script', cursive;
+    font-family: 'Handlee', verdana, sans-serif;
     letter-spacing: .01em;
     font-size: 3em;
     font-weight: 300;
