--- a/css/sources/style.css
+++ b/css/sources/style.css
@@ -63,9 +63,9 @@ p {color: #fff;}
 
 .subtext {
     font-family: 'Handlee', verdana, sans-serif;
-    text-transform: lowercase;
+    font-size: 1.2em;
     letter-spacing: .01em;
-    font-size: 1.4em;
+    text-transform: lowercase;
 }
 
 .logointro {
@@ -92,35 +92,38 @@ p {color: #fff;}
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
-    background-image: url(../../img/sources/main-bg.jpg);
+    background-image: url(../../img/dist/bg/main-bg.jpg);
 }
 
 .bl-main > section {
 	position: absolute;
 	width: 100%;
-	height: 25%;
 }
 
 .bl-main > section:first-child {
+    height: 34%;
 	top: 0;
 	left: 0;
 	/* background:rgba(14,194,161,0.95); */
 }
 
 .bl-main > section:nth-child(2) {
-	top: 25%;
+    height: 22%;
+	top: 34%;
 	left: 0;
 	/* background:rgba(162,240,226,0.95); */
 }
 
 .bl-main > section:nth-child(3) {
-	top: 50%;
+    height: 22%;
+	top: 56%;
 	left: 0;
 	/* background:rgba(224,248,244,0.95); */
 }
 
 .bl-main > section:nth-child(4) {
-	top: 75%;
+    height: 22%;
+	top: 78%;
 	left: 0;
 	/* background:rgba(255,255,255,0.95); */
 }
@@ -157,15 +160,23 @@ p {color: #fff;}
 
 .bl-box h2 {
     font-family: Impact, Charcoal, sans-serif;
-	text-align: center;
-    color: white;
 	margin: 0;
 	padding: 20px;
 	width: 100%;
-	font-size: 1.8em;
-	letter-spacing: 2px;
-	font-weight: 700;
-	text-transform: uppercase;
+    text-align: center;
+    color: #cab68e; /* main Beige color */
+    font-size: 2.2em;
+    font-weight: 700;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    text-shadow: 0 1px #000,
+                1px 0 #000,
+                -1px 0 #000,
+                0 -1px #000,
+                -1px -1px #000,
+                1px 1px #000,
+                1px -1px #000,
+                -1px 1px #000;
 }
 
 .bl-white h2 {color:#fff;}
@@ -241,6 +252,10 @@ div.bl-panel-items > div > div {
 	padding-bottom: 15px;
 	font-size: 1.7em;
 	line-height: 1.8;
+}
+.bl-content p span {
+	color: #cab68e; /* main Beige color */
+    text-shadow: 0 1px #000, 1px 0 #000, -1px 0 #000, 0 -1px #000, -1px -1px #000, 1px 1px #000, 1px -1px #000, -1px 1px #000;
 }
 .turquesa p {
 	color:#0ec2a1;
@@ -344,7 +359,7 @@ div.bl-panel-items > div {
 }
 
 div.bl-panel-items > div > div {
-	width: 60%;
+	width: 80%;
 	margin: 0 auto;
 	opacity: 1;
 	bottom: 90px;
@@ -366,6 +381,8 @@ div.bl-panel-items > div > div img {
 	float: left;
 	margin: 0 20px 20px 0;
 	max-width: 100%;
+    width: 250px;
+    height: 250px;
 }
 
 div.bl-panel-items {
@@ -374,7 +391,7 @@ div.bl-panel-items {
 }
 
 div.bl-panel-items > div {
-	background: #0ec2a1;
+	background: #cab68e; /* main Beige color */
 	z-index: 0;
 	opacity: 0;
 	-webkit-transform: translateY(0);
@@ -444,12 +461,26 @@ div.bl-panel-items > div.bl-hide-current-work {
 }
 
 .bl-panel-items img {
-    border: 5px solid #fff;
+    cursor: pointer;
+    /*
+    border: 5px solid #fff; 
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
     border-radius: 5px;
+    */
+}
+
+.bl-panel-items img:hover {
+    /*
+    position: absolute;
+    top: 20%;
+    z-index: 2000;
+    -ms-transform: scale(2,2);
+    -webkit-transform: scale(2,2);
+    transform: scale(2,2);
+    */
 }
 
 /* Transition classes and properties */
@@ -513,7 +544,8 @@ section.bl-expand .bl-box {
 	transition: all 0.2s ease-in-out;
 }
 
-.no-touch section:not(.bl-expand) .bl-box:hover h2 {
+.no-touch section:not(.bl-expand) .bl-box:hover h2,
+.no-touch section:not(.bl-expand) .bl-box:hover h1 {
 	-webkit-transform: translateY(-15px);
 	-moz-transform: translateY(-15px);
 	-ms-transform: translateY(-15px);
