--- a/css/sources/variables.css
+++ b/css/sources/variables.css
@@ -1,6 +1,6 @@
 /* ... VARIABLES ... */
 /* main Beige color */
-/* main Turquesa */
+/* white color */
 /* ... MIXINS ... */
 .text-shadow {
   text-shadow: 0 1px #000, 1px 0 #000, -1px 0 #000, 0 -1px #000, -1px -1px #000, 1px 1px #000, 1px -1px #000, -1px 1px #000;
