--- a/less/variables.less
+++ b/less/variables.less
@@ -2,7 +2,7 @@
 
 // COLORS:
 @main-color: #cab68e; /* main Beige color */
-@main-text: #0ec2a1; /* main Turquesa */
+@main-text: @white; /* white color */
 
 @white: #fff;
 @grey-3: #333;
