--- a/less/style.less
+++ b/less/style.less
@@ -20,6 +20,27 @@
     transition: all 150ms ease-in;
 }
 
+.italic {
+    font-style: italic;
+}
+
+.text-shadow {
+    text-shadow: 0 1px #000, 1px 0 #000, -1px 0 #000, 0 -1px #000, -1px -1px #000, 1px 1px #000, 1px -1px #000, -1px 1px #000;
+}
+
+// Clearfix to floats behaviour
+.clearfix {
+  &:before,
+  &:after {
+    content: " ";
+    display: table;
+  }
+  &:after {
+    clear: both;
+  }
+}
+
+
 /* --- common BODY -------------------------------- */
 
 body, html { font-size: 100%; padding: 0; margin: 0; height: 100%;}
@@ -63,16 +84,26 @@ p {
 }
 
 .subtext {
+    padding-right: 10px;
     font-family: 'Handlee', verdana, sans-serif;
     font-size: 1.2em;
     letter-spacing: .01em;
     text-transform: lowercase;
 }
 
+// common Main Logo
 .logointro {
-    max-width: 216px;
+    max-width: 100px;
     height: auto;
     margin-top: 50px;
+}
+
+.logointro + p {
+    font-family: 'Handlee', verdana, sans-serif;
+    font-size: 20px !important;
+    color: @main-color !important;
+    letter-spacing: .02em !important;
+    .text-shadow;
 }
 
 /* --- common CONTAINER - MAIN FRAME -------------------------------- */
@@ -219,10 +250,10 @@ div.bl-panel-items > div > div {
     h2 {
         font-family: 'Handlee', verdana, sans-serif;
         letter-spacing: .01em;
-        font-size: 3em;
+        font-size: 2.5em;
         font-weight: 300;
-        color: @white;
-        border-bottom: 1px solid @white;
+        color: @main-color;
+        border-bottom: 1px solid @main-color;
         margin: 0 0 20px 0;
     }
     
@@ -248,12 +279,23 @@ div.bl-panel-items > div > div {
                 .anim-150;
             }
         }
+        
+        &.contact-phone {
+            font-family: Verdana, Geneva, sans-serif;
+            font-size: 22px;
+            font-weight: 400;
+            
+            a {
+                font-size: 22px;
+                font-weight: 400;
+            }
+        }
     }
     
     // Icons
     i {
         color: @white;
-        font-size: 1.4em;
+        font-size: 35px;
         padding: 0 5px;
     }
     
@@ -286,13 +328,13 @@ div.bl-panel-items > div > div {
         padding: 10px 40px 10px 0px;
         
         h3 {
-            font-weight: 700;
-            letter-spacing: 2px;
-            text-transform: uppercase;
             margin: 0 0 10px 0;
             padding-top: 20px;
-            font-size: 1.4em;
+            font-size: 22px;
+            font-weight: 400;
+            letter-spacing: 1px;
             color: @main-color;
+            .text-shadow;
             
             i {
                 font-size: 1em;
@@ -304,10 +346,21 @@ div.bl-panel-items > div > div {
         }
         
         p {
-            padding-left: 44px;
+            padding-left: 35px;
             color: @white;
             .text-block;
+            
+            i {
+                font-size: 20px;
+                padding-right: 12px;
+            }
         }
+    }
+    
+    // last Logo container
+    .logo-block {
+        width: 100%;
+        text-align: center;
     }
 }
 
@@ -521,7 +574,7 @@ div.bl-panel-items {
         text-transform: uppercase;
         letter-spacing: 0.03em;
         position: relative;
-        bottom: 92px;
+        bottom: 22px;
         -webkit-transition: all 0.2s ease-in-out;
         -moz-transition: all 0.2s ease-in-out;
         transition: all 0.2s ease-in-out;
@@ -532,7 +585,9 @@ div.bl-panel-items {
         -moz-transition: all 0.2s ease-in-out;
         transition: all 0.2s ease-in-out;
         
+        // Main Header Title in tablets & mobile devices
         &.main-title {
+            font-size: 3.5em;
             padding-bottom: 0;
             .text-shadow;
         }
@@ -585,23 +640,19 @@ section.bl-expand {
 }
 
 
-// TURQUESA SPECIAL COLOR:
-.turquesa {
-    h2 {
-        border-bottom: 1px solid @main-text;
-    }
-    p, i, span, h2 {
-        color: @main-text;
-    }
-}
-
 
 .main-pic {
     width: 200px;
     height: 190px;
 }
 
+/* --- "CONTACT" block SECTION -------------------------------- */
 
+section.section-four {
+    .bl-content {
+        text-align: center;
+    }
+}
 
 
 /* --- common MEDIA QUERIES -------------------------------- */
@@ -628,26 +679,42 @@ section.bl-expand {
     .bl-box {
         h2.main-title {
            font-size: 70px;
+            padding-top: 0;
         }
     }
     .bl-main > section:hover {
         background-color: rgba(255,255,255,.05);
     }
     
-    /* ... Mis Habilidades section ... */
+    /* ... "Sobre Mi" & "Mis Habilidades" Sections ... */
+    section.section-one,
     section.section-two {
         .bl-content {
             article {
                 display: inline-block;
                 width: 48%;
-                min-height: 180px;
+                overflow: auto;
 
-                &:nth-child(odd) {
+                &:nth-child(even) {
                     float: left;
                 }
-                &:nth-child(even) {
+                &:nth-child(odd) {
                     float: right;
                 }
+            }
+        }
+    }
+    section.section-one {
+        .bl-content {
+            article {
+                min-height: 180px;
+            }
+        }
+    }
+    section.section-two {
+        .bl-content {
+            article {
+                min-height: 145px;
             }
         }
     }
@@ -658,8 +725,8 @@ section.bl-expand {
 @media screen and (max-width: 768px) {
     .bl-box {
         h1 {
-           font-size: 12px;
-            bottom: 145px;
+           font-size: 16px;
+           bottom: 35px;
         }
     }
 }
