--- a/less/variables.less
+++ b/less/variables.less
@@ -2,6 +2,7 @@
 
 // COLORS:
 @main-color: #cab68e; /* main Beige color */
+@second-color: #e0d4bc; /* secondary Beige color */
 @main-text: @white; /* white color */
 
 @white: #fff;
