--- a/templates/index.pug
+++ b/templates/index.pug
@@ -10,7 +10,7 @@ html(lang='en')
     meta(name='author', content='')
     link(rel='shortcut icon', href='img/dist/favicon/favicon.ico')
     // Custom Styles
-    link(rel='stylesheet', type='text/css', href='css/sources/style.css')
+    link(rel='stylesheet', type='text/css', href='css/dist/style.css')
     // Font Awesome styles
     link(rel='stylesheet', type='text/css', href='css/dist/font-awesome.css')
     script(src='js/dist/modernizr.custom.js')
