--- a/less/style.less
+++ b/less/style.less
@@ -748,6 +748,37 @@ section.section-four {
     }
 }
 
+@media screen and (max-width: 599px) {
+    // SubSections container
+    .bl-content, 
+    div.bl-panel-items > div > div {
+        top: 40px;
+        left: 15px;
+        right: 15px;
+        bottom: 30px;
+        padding: 0 15px;
+    }
+    // Icon close for all sections
+    .bl-icon-close {
+        top: 10px;
+    }
+    // Icons in Main - Intro View
+    .bl-box {
+        h1 {
+          font-size: 16px;
+          bottom: 20px;  
+        }
+        h2 {
+            i {
+                font-size: 30px;
+                margin-bottom: 10px;
+            }
+        }
+    }
+}
+
+
+
 
 
 
